--- a/web_demo/src/main/resources/static/index.html
+++ b/web_demo/src/main/resources/static/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-    </script>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
 /*        $(document).ready(function () {
             $.ajax({
