--- a/web_demo/src/main/resources/static/lan.html
+++ b/web_demo/src/main/resources/static/lan.html
@@ -5,7 +5,7 @@
     <title>Language</title>
     <meta name="viewport"
           content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <script src="js/jquery/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/jquery/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/jquery/jquery.i18n.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/com.js" type="text/javascript" charset="utf-8"></script>
 </head>
