--- a/web_demo/src/main/resources/static/failure.html
+++ b/web_demo/src/main/resources/static/failure.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" charset="UTF-8">
-    <title>登录成功</title>
+    <title>登录失败</title>
 </head>
 <body>
-欢迎, 登录成功！ <a href="/j_spring_security_logout">退出</a>
+登录失败, 继续吗？
 </body>
 </html>
