--- a/web_demo/src/main/resources/static/login.html
+++ b/web_demo/src/main/resources/static/login.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" charset="UTF-8">
     <title>登录</title>
 </head>
-<script src="js/jquery/jquery-1.8.2.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    $(document).ready(function () {
-        $.ajax({
-            url: 'http://localhost:8080/areaUser/area/AddressManage/getOverviewMap.do',
-            type: 'get',
-            dataType: 'jsonp', //请求方式为jsonp
-            // crossDomain: true,
-            jsonp: 'onBack',
-            // jsonpCallback: "onBack",
-            data: {},
-            // 注意后台返回数据类型text/plain application/json
-            /*@RequestMapping(value ="/getOverviewMap.do", produces = "text/plain;charset=utf-8")
-            public @ResponseBody String getOverviewMap(HttpServletRequest request,) {
-                String onBack = request.getParameter("onBack");
-                HashMap<String, Object> map = new HashMap<>();
-                map.put("name", "nick");
-                map.put("age", 23);
-                return onBack + "(" + JSONObject.toJSONString(map) + ")";
-            }*/
-            success: function (data, textStatus, jqXHR) {
-                alert(data.name);
-            },
-            error: function (xmlHttpRequest, textStatus, errorThrown) {
-                alert(errorThrown);
-            },
-            complete: function (xmlHttpRequest, textStatus) {
-                // alert('complete');
-            }
-        });
-    });
-</script>
-<body>
-登录
+<body onload='document.form.username.focus();'>
+<h3>登录</h3>
+<form name='form' action='/j_spring_security_check' method='POST'>
+    <table>
+        <tr>
+            <td>User:</td>
+            <td><input type='text' name='username'/></td>
+        </tr>
+        <tr>
+            <td>Password:</td>
+            <td><input type='password' name='password'/></td>
+        </tr>
+        <tr>
+            <td colspan='2'><input name="submit" type="submit" value="Login"/></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
